updated at: 2023-04-25 22:19, VRChat向け　ふぐ - 山吹屋 - BOOTH

--- a/VRChat/33/1280433.html
+++ b/VRChat/33/1280433.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PKIqBlbOHpiLkDqrnE+yg/FdXqKehkOVKeXTWqw29D4="></script>
+    "a/eHfre7jDPddkzgz8S2ciLAQpWNkoBRLKbpPdvUaOs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　ふぐ","description":"VRchat向けアクセサリ：ふぐ\nポリゴン数2464のFBXファイルと\nテクスチャが入っております\n\n画像はひれの裏側が表示されていますがメッシュはありません、シェーダーで表示しています\n\n画像はcubeds unity shadersを使用しています。\n","url":"https://booth.pm/ja/items/1280433","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/eaae416f-80ca-4582-baa6-17cd5c7d41ab/i/1280433/d3bf0974-8e31-4e8f-8e7a-5e54cdd1368d_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PKIqBlbOHpiLkDqrnE+yg/FdXqKehkOVKeXTWqw29D4="></script>
+    nonce="a/eHfre7jDPddkzgz8S2ciLAQpWNkoBRLKbpPdvUaOs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1280433/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               68
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1280433/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               68
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
