updated at: 2023-04-25 22:20, VRChat用アバター　フェレビット族の少年　Avatar3.0対応　VRM同梱 - アノマロ工房 - BOOTH

--- a/VRChat/81/1278881.html
+++ b/VRChat/81/1278881.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Evn5uaiz/mNbSSapPWxArO/EZ1o2XR02vhCxI8EsdfQ="></script>
+    "2C1TFpjKO9qtPC6hQvVZ3lr/9G0cTkbvx6HwgvhVCDU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用アバター　フェレビット族の少年　Avatar3.0対応　VRM同梱","description":"別の惑星に住むフェレットやウサギに近い知的生命体\nという設定。\n\n洞窟を探索してお宝を売って生計を立てている。\n\n・持っている武器\nスパイクパイルハンマー\n敵を殴る時に内部の火薬を爆発させパイルバンカーのように\n音速でスパイクが飛び出る。\n頑丈な金属や岩をも破壊する威力を持つ。\n\n◆試着用VRChatワールドあります。\n起動用URLはこちら。\nhttps://vrchat.com/home/launch?worldId=wrld_95558c9f-d703-44f3-aca0-43ad03c2cec8","url":"https://booth.pm/ja/items/1278881","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1300"},"image":"https://booth.pximg.net/c/620x620/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1278881/105facc5-3a79-4c3d-8590-0b5f2c5a0c6e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Evn5uaiz/mNbSSapPWxArO/EZ1o2XR02vhCxI8EsdfQ="></script>
+    nonce="2C1TFpjKO9qtPC6hQvVZ3lr/9G0cTkbvx6HwgvhVCDU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1278881/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1278881/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
