--- a/VRChat/13/1279513.html
+++ b/VRChat/13/1279513.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Yrjx2TjETCg/Fg7wkPxHiBMQmytdGWR/swIavTPiO6A="></script>
+    "iAS9LbKFLmQ8SFGGmOxttQG+hgvktt4IZCiCYqKFySo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"キーチェーン","description":"キーホルダーのチェーンです。\n好きなオブジェクトをぶら下げて、アバターのアクセサリとして使うことを想定しています。\nダイナミックボーンを導入することで、チェーンを揺らすことが可能です。\nボーン使用数が10個のバージョンと、3個のバージョンを同梱しています。\nUnity及びVRChatでの使用を想定していますが、fbxファイルおよびテクスチャファイルを同梱していますので、他の3Dモデルやゲームソフト等に組み込んで使用することも可能です。\n\n※画像のドーナツはパッケージに含まれません","url":"https://booth.pm/ja/items/1279513","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/64255878-1532-4d6c-abdb-a9cf35ee4a39/i/1279513/fac5e2f3-5da5-4bdb-9df0-8a4c718d702f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Yrjx2TjETCg/Fg7wkPxHiBMQmytdGWR/swIavTPiO6A="></script>
+    nonce="iAS9LbKFLmQ8SFGGmOxttQG+hgvktt4IZCiCYqKFySo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1279513/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               113
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1279513/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               113
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
