updated at: 2023-04-25 22:21, ワニのおもちゃ　(VRChat想定モデル) - リノールのどうぶつ雑貨店 - BOOTH

--- a/VRChat/37/1278937.html
+++ b/VRChat/37/1278937.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "AU8hWHfCW4NpiL0BIzikBKq/t9nH6FR4eDR4FDHVPoI="></script>
+    "iLSGrui75acJpxvI1+lqTygakrq9vrMrqSC7wFwKjC8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ワニのおもちゃ　(VRChat想定モデル)","description":"ワニのおもちゃが無料！！　動く！　リアル！　VRで見れる！","url":"https://booth.pm/ja/items/1278937","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/860474d4-d153-4e66-a594-a4e3e5e77c4e/i/1278937/6236d38c-0983-4b1f-a065-713649525959_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AU8hWHfCW4NpiL0BIzikBKq/t9nH6FR4eDR4FDHVPoI="></script>
+    nonce="iLSGrui75acJpxvI1+lqTygakrq9vrMrqSC7wFwKjC8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,10 +163,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1278937/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              81
+                              82
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1278937/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              81
+                              82
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
