updated at: 2023-04-25 22:21, 例のキーホルダー風（△1728） - ぼたっくる商店 - BOOTH

--- a/VRChat/21/1278921.html
+++ b/VRChat/21/1278921.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "uQo8o3tt9ygaVvAT9gwl/8fgH8UMuOK/clNbkiI1wBM="></script>
+    "q1GTq2CAUk/zPBwU0HiJmr72sLr7Sd8fFdNdbr6iuHw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"例のキーホルダー風（△1728）","description":"どこかで観た事ある例のキーホルダー風の3Dモデル（Unity用）","url":"https://booth.pm/ja/items/1278921","offers":{"priceCurrency":"JPY","@type":"Offer","price":"128"},"image":"https://booth.pximg.net/c/620x620/35eda33f-5f5b-4dec-bda5-d25adcc391d1/i/1278921/b9df5169-7d7e-42e5-a5ef-2f331ef86b9e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uQo8o3tt9ygaVvAT9gwl/8fgH8UMuOK/clNbkiI1wBM="></script>
+    nonce="q1GTq2CAUk/zPBwU0HiJmr72sLr7Sd8fFdNdbr6iuHw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1278921/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               48
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1278921/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               48
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
