updated at: 2023-04-25 22:21, バトペン筆箱 - Materia Sarria - BOOTH

--- a/VRChat/39/1277139.html
+++ b/VRChat/39/1277139.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vzMkLQdBvsga29tOBIZFYZCwFITqktal8hCgSi0gIII="></script>
+    "OGd1TLZsCoU+ybW9kTQr3xdOR+qdfch/iH90WeZHNDs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"バトペン筆箱","description":"各総ポリ数：400未満\n各マテリアル数：3\n\nこちらは腕にデュ〇ルディ〇ク風に装着を想定したものとなっております。\n5本のうち1本はオリジナルのテクスチャに切り替えられます！自分のバトペンを持ってバトろう！！\n\nアレジゴクゲームス プレイボーン様 twitter\nhttps://twitter.com/VPlaybone\n\n～バトペン一覧～\nhttps://drive.google.com/drive/folders/1DUiP83olgadkr9swPfypm2VjtuNGjRTa\n\n※2枚目[使用例]に使用したモデル\nバーチャルモデルクリエイターぬこみや様\n　VR-UMAゔるまちゃん改変モデル","url":"https://booth.pm/ja/items/1277139","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/1d14c665-3ae2-443e-9d88-4fc1502813e4/i/1277139/f2b07770-7254-4573-a043-1820d40fd8aa_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vzMkLQdBvsga29tOBIZFYZCwFITqktal8hCgSi0gIII="></script>
+    nonce="OGd1TLZsCoU+ybW9kTQr3xdOR+qdfch/iH90WeZHNDs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1277139/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               88
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1277139/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               88
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
