--- a/VRChat/22/1277422.html
+++ b/VRChat/22/1277422.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "KfUwuO6mSjKy5mmtxqTur8wzPQLPH6+U2sDg8CLfcQ0="></script>
+    "3uXdnl8WBjEh2WZYWqceLpk/75YAl+/9n3RMbitO7/I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ミニテラリウム（△712）","description":"ミニテラリウムの3Dモデル（Unity用）","url":"https://booth.pm/ja/items/1277422","offers":{"priceCurrency":"JPY","@type":"Offer","price":"128"},"image":"https://booth.pximg.net/c/620x620/35eda33f-5f5b-4dec-bda5-d25adcc391d1/i/1277422/7cd8eeb7-9d0c-4fde-9061-4c3ff16c7d14_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KfUwuO6mSjKy5mmtxqTur8wzPQLPH6+U2sDg8CLfcQ0="></script>
+    nonce="3uXdnl8WBjEh2WZYWqceLpk/75YAl+/9n3RMbitO7/I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1277422/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               69
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1277422/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               69
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
