updated at: 2023-04-25 22:23, Pieinput【VR用キーボードソフトウェア】 - ヨルノイシ - BOOTH

--- a/VRChat/73/1277273.html
+++ b/VRChat/73/1277273.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "cZdGxqCiHl1KeDf61tA87aho4F5xLv8fLFo8whpxQkE="></script>
+    "PnbTlXtKC56YYvRANc+ZNvFv5p079m9qaNHZ9mvaDFo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Pieinput【VR用キーボードソフトウェア】","description":"VRのために設計されたVR用キーボードソフトウェアです。\n\nボタンを使わないインターフェースによって使用しているVRアプリケーションと干渉せず杖を振るような感覚(フリック入力のようなイメージです)で素早く文字を入力できます。\n\nSteamVRのオーバーレイ機能を使用しているためVRChatなどのVRゲーム内で文字入力をするときや、バーチャルデスクトップ機能で文字入力をするときに使用できます。\n\nまた、キーボードの一時非表示機能や細かい設定機能もあります。\n\nこだわりポイントとしては特殊なキーはほぼ直線の動作で入力できるようになっていて変換やシフトは上、スペースは右、バックスペースは左、エンターは下といった風に素早く入力することができます。\n\nまた、入力できるキーの中にはプログラムに使用する()類なども多く含まれておりプログラミング作業にも使いやすいようになっています。","url":"https://booth.pm/ja/items/1277273","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/a9bdc7be-d6ee-4ca8-8986-527ca8368187/i/1277273/8fe1eee7-6c3c-49be-8b0f-b3346dc9ab42_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cZdGxqCiHl1KeDf61tA87aho4F5xLv8fLFo8whpxQkE="></script>
+    nonce="PnbTlXtKC56YYvRANc+ZNvFv5p079m9qaNHZ9mvaDFo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1277273/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               212
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1277273/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               212
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
