--- a/VRChat/66/1277266.html
+++ b/VRChat/66/1277266.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "8+XOuPjJ73UfoVsDw9AGXm97jQh7O/ynqteh0W2REMY="></script>
+    "IuUpdsy1EQ0eWtpzydaeS37Zrsx5zPAMqxrOUxc+toc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"焚火","description":"-特徴-\n\n・暖炉などに設置する用の焚火です。\n・専用のshaderで火に疑似的な奥行きとボリューム感を出しています。\n・軽量かつキレイに描画できます。\n・奥にあるものを揺らがせて描画することができます。\n\nサンプル動画\nhttps://youtu.be/5Z8qrRhZVBo\n\n-注意点-\n\n・横から見るには適していません。\n・正面左右60度以上横から見ると破綻が大きくなります。\n・動画にはpost-processingが使われています。\n\n-内容-\n・fire.unitypackage\n・Readme\n\n\n-ライセンス-\n\n対象コンテンツの利用権利の販売となります。コンテンツを改変および任意メディアで利用することができます。\n\n・ただし下記を禁止します。\n\n他人が利用できるようにし、著作者の販売を阻害すること。\nコンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。\n法人利用をすること。\n\n\n・その他\n\nコンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。\n利用権利は他人に譲渡することができません。\n\nこのライセンスにおける解説情報は下記になります。\nhttps://gitlab.com/towelfunnelvrc/towel-license/wikis/\n（タオルライセンス 販売用 version0.9）\n\n\n-使用方法-\n\nfire.unitypackageをインポートfire prehabを設置する。\n\n-連絡先-\n\nhttps://twitter.com/lept_on","url":"https://booth.pm/ja/items/1277266","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/408b6933-3b28-43c3-ad6b-bcf87be77732/i/1277266/ddbbe34d-1e72-46c0-9561-c7307b1119a3_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8+XOuPjJ73UfoVsDw9AGXm97jQh7O/ynqteh0W2REMY="></script>
+    nonce="IuUpdsy1EQ0eWtpzydaeS37Zrsx5zPAMqxrOUxc+toc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -117,6 +117,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,10 +162,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1277266/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              231
+                              232
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1277266/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              231
+                              232
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
