updated at: 2023-04-25 22:23, ジェムロボ Code.クロム - Imoimo10 Made Ornaments - BOOTH

--- a/VRChat/54/1277054.html
+++ b/VRChat/54/1277054.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "rWNj9Sl5/CAvYkx9vd3n2ULoTYJOt1jDSL7oXo0Otkc="></script>
+    "Vuj1YV5P8O9J1k31IvMloPkJBB3j9kU+hXqgLbl/5Vk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ジェムロボ Code.クロム","description":"・ジェムロボ Code.クロム\nアニメーション設定済み、無機物系アバター\nCode.の通り、シリーズ化予定です。","url":"https://booth.pm/ja/items/1277054","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/fe570969-8b03-4395-8336-1ab48236e8fb/i/1277054/04c4ae8a-9324-45da-aa9f-1dfee1ac4c60_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rWNj9Sl5/CAvYkx9vd3n2ULoTYJOt1jDSL7oXo0Otkc="></script>
+    nonce="Vuj1YV5P8O9J1k31IvMloPkJBB3j9kU+hXqgLbl/5Vk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1277054/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               107
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1277054/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               107
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
