updated at: 2023-04-25 22:24, [無料配布]おまつりのつえEX たまごのつえ - AYWorks - BOOTH

--- a/VRChat/37/1276437.html
+++ b/VRChat/37/1276437.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "R1g7sYpU4Nzt3rzAgpw0C3JRTW+y4j03YRg83Ye/JXM="></script>
+    "eEB4wyOOgkWoNy8PbvO9Q6s7JS53cH3LtbiPGjCo+CM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[無料配布]おまつりのつえEX たまごのつえ","description":"たまごのつえ　V1.0\n△3868\n\n以下セットです\n・Blenderファイル\n・FBX\n・2DViewテクスチャ\n・Unity5以降Standardシェーダー向けテクスチャ（Albedo / Smoothness / Normal）\n・Prefab入りUnityPackage\n・なんかシルエットがかっこいいかんじになったときに出力したおまけのFBX\n\nイースターをモチーフに制作した自己主張の激しい棒です\n分解が容易なので自己主張の激しい部分だけ後光として背負ってもヨシ！","url":"https://booth.pm/ja/items/1276437","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/60a161b7-c7bb-4fa2-8dc4-8ac298dd3e5f/i/1276437/5e6d2285-e921-4ed1-89d9-cb3af5156e68_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="R1g7sYpU4Nzt3rzAgpw0C3JRTW+y4j03YRg83Ye/JXM="></script>
+    nonce="eEB4wyOOgkWoNy8PbvO9Q6s7JS53cH3LtbiPGjCo+CM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1276437/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1276437/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
