updated at: 2023-04-25 22:25, ナツカゼのゴーグル - Natsukaze GARAGE SALE - BOOTH

--- a/VRChat/79/1275479.html
+++ b/VRChat/79/1275479.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "OgRbDRkDoAzjaSB6xjzTIo2Z5otwWx0lKIgZlXDc7zY="></script>
+    "gTQ2wi1tZ4eNsqCLEZyjfliyvif6B14UIgak+crz4PM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ナツカゼのゴーグル","description":"ナツカゼちゃんの思い出が詰まったゴーグルなのだ！\n\nVRChatでアバターに身に付けたり、ワールドに飾ったりするとよいのだ！\n\nポリゴン数は▲872\n装着シェイプキーが入っているのだ！\n（ナツカゼちゃんの大きめの頭に合わせて動くから、合わない場合は自分で比率を調節するのだ）\n\nVRC向けのunitypackageになっているのだ！\n\n要望や不具合などがあったらTwitterのDMまで知らせてほしいのだ！","url":"https://booth.pm/ja/items/1275479","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/8d9d1fb7-104d-4c64-8a88-79480e72d300/i/1275479/ff4abade-f3aa-442e-a587-8394ff8c2903_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OgRbDRkDoAzjaSB6xjzTIo2Z5otwWx0lKIgZlXDc7zY="></script>
+    nonce="gTQ2wi1tZ4eNsqCLEZyjfliyvif6B14UIgak+crz4PM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1275479/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               56
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1275479/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               56
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
