updated at: 2023-04-25 22:26, Simple Goggles - KzWorks - BOOTH

--- a/VRChat/84/1275384.html
+++ b/VRChat/84/1275384.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "3LFMRqXe1y1pW2Sfk9QNHGnGoTXyBw1M3Kwa8D1DOpk="></script>
+    "oyRiXzhxhmKbZ1ezxWYPrDvlQloUNNzc1WhDqEG5EZM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Simple Goggles","description":"■Simple Goggles紹介文\n\nVRChat向けアクセサリー\nスポーツチックなゴーグルです。\n\n△1,860 ※ちょっと多くて申し訳すんません...\nレンズとバンドの2パーツ構成です。\n\n\n－－－利用規約－－－\n　本モデルをご購入された時点で、本利用規約に同意されたものとさせていただきます。\n　著作権は制作者であるkazulock1080に帰属するものとします。\n\n【許諾事項】\n・本モデルデータの改変/改造\n・商用利用(動画配信、ゲーム制作、映像制作等)\n・私的利用\n\n【禁止事項】\n・本モデルデータに付属するデータの再配布、販売\n・公序良俗に反する利用\n・政治的、宗教的又は他者への誹謗中傷目的での利用\n\n【免責事項】\n本モデルの利用または利用不能に関連して発生したトラブルや損失、損害について、\n制作者は一切の損害賠償責任を負わないものとします。\n\n制定日:2019年03月15日\n\n連絡先\nTwitter:kazubox1080\nVRChat:kazulock1080\nDiscord:kazulock1080 #1656\n－－－－－－－－－","url":"https://booth.pm/ja/items/1275384","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/2e2d7c2d-ed89-4951-b03a-f50245396501/i/1275384/14e3a71a-69ac-4152-9590-3e7f3c57f962_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3LFMRqXe1y1pW2Sfk9QNHGnGoTXyBw1M3Kwa8D1DOpk="></script>
+    nonce="oyRiXzhxhmKbZ1ezxWYPrDvlQloUNNzc1WhDqEG5EZM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1275384/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               114
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1275384/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               114
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
